--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
     <div
       class="w-full h-screen flex flex-col gap-2 justify-center items-center"
     >
-      <h1 class="text-4xl font-semibold">Reid Mason</h1>
+      <h1 class="text-4xl font-semibold text-gray-50">Reid Mason</h1>
       <a
         class="text-blue-500 hover:underline hover:cursor-pointer text-xl"
         href="https://github.com/ReidMason">GitHub</a
