Visually centered middle text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Reid Mason personal site">
-  <main>
-    <div
-      class="w-full h-screen flex flex-col gap-2 justify-center items-center"
-    >
+  <main class="w-full h-screen flex flex-col justify-center items-center">
+    <div class="flex flex-col items-center gap-2 mb-32">
       <h1 class="text-4xl font-semibold text-gray-50">Reid Mason</h1>
       <a
         class="text-blue-500 hover:underline hover:cursor-pointer text-xl"
