--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Reid Mason personal site">
+<Layout title="Reid Mason">
   <main class="w-full h-screen flex flex-col justify-center items-center">
     <div class="flex flex-col items-center gap-2 mb-32">
       <h1 class="text-4xl font-semibold text-gray-50">Reid Mason</h1>
