Added dyanmic blog routes and moved to mdx

--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -3,7 +3,7 @@ const { href } = Astro.props;
 ---
 
 <a
-  class="group text-blue-500 transition-colors hover:underline hover:cursor-pointer text-xl"
+  class="group text-xl text-blue-500 transition-colors hover:cursor-pointer hover:underline"
   href={href}
 >
   <slot />
