--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -4,7 +4,7 @@ import LinkedInIcon from "../components/icons/LinkedInIcon.astro";
 import SocialLink from "../components/SocialLink.astro";
 ---
 
-<div class="flex gap-4 github-link origin-top">
+<div class="social-links flex origin-top gap-4">
   <SocialLink
     text="GitHub"
     href="https://github.com/ReidMason"
@@ -18,7 +18,7 @@ import SocialLink from "../components/SocialLink.astro";
 </div>
 
 <style>
-  .github-link {
+  .social-links {
     animation: slide-in 500ms forwards cubic-bezier(0.57, 0.21, 0.69, 1.25);
     animation-delay: 250ms;
     @apply opacity-0;
