--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -4,7 +4,7 @@ const { href, text, Icon } = Astro.props;
 ---
 
 <Link href={href}>
-  <div class="flex gap-1 items-center">
+  <div class="flex items-center gap-1">
     <Icon
       className="text-gray-400 group-hover:text-gray-200 transition-colors h-6 w-6"
     />
