--- a/src/components/blogCard.astro
+++ b/src/components/blogCard.astro
@@ -1,17 +1,23 @@
 ---
+import type { CollectionEntry } from "astro:content";
+import { createBlogUrl } from "../utils";
+
 export interface Props {
-  title: string;
-  body: string;
-  href: string;
+  blog: CollectionEntry<"blogs">;
 }
 
-const { title, body, href } = Astro.props;
+const { blog } = Astro.props;
 ---
 
-<div class="text-gray-50 border border-slate-500 rounded-xl p-4">
+<div
+  class="flex flex-col gap-4 rounded-xl border border-slate-500 p-4 text-gray-50"
+>
   <a
-    class="font-semibold text-xl hover:underline hover:text-blue-500 cursor-pointer transition-colors"
-    href={href}>{title}</a
+    class="cursor-pointer text-xl font-semibold transition-colors hover:text-blue-500 hover:underline"
+    href={createBlogUrl(blog.slug)}>{blog.data.title}</a
   >
-  <p>{body}</p>
+  <p>{blog.data.description}</p>
+  <a class="text-blue-500 underline" href={createBlogUrl(blog.slug)}
+    ><small>Read more...</small>
+  </a>
 </div>
