--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-gradient-to-br from-slate-800 to-slate-900 h-screen">
+  <body class="h-screen bg-gradient-to-br from-slate-800 to-slate-900">
     <slot />
   </body>
 </html>
