--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -6,17 +6,10 @@ const allBlogPosts = await getCollection("blogs");
 ---
 
 <Layout title="Blogs">
-  <main class="flex flex-col items-center">
-    <div class="flex gap-8">
-      {
-        allBlogPosts.map((x) => (
-          <BlogCard
-            title={x.data.title}
-            body={x.data.description}
-            href={`/blogs/${x.slug}`}
-          />
-        ))
-      }
+  <main class="flex flex-col items-center gap-8 text-gray-50">
+    <h1 class="font-semibold text-3xl">Blogs</h1>
+    <div class="flex flex-col w-96 gap-8">
+      {allBlogPosts.map((blog) => <BlogCard blog={blog} />)}
     </div>
   </main>
 </Layout>
