--- a/src/components/blogCard.astro
+++ b/src/components/blogCard.astro
@@ -3,7 +3,7 @@ import type { CollectionEntry } from "astro:content";
 import { createBlogUrl } from "../utils";
 
 export interface Props {
-  blog: CollectionEntry<"blogs">;
+  blog: CollectionEntry<"blog">;
 }
 
 const { blog } = Astro.props;
