--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,13 +2,13 @@
 import { getCollection } from "astro:content";
 import BlogCard from "../../components/blogCard.astro";
 import Layout from "../../layouts/Layout.astro";
-const allBlogPosts = await getCollection("blogs");
+const allBlogPosts = await getCollection("blog");
 ---
 
-<Layout title="Blogs">
+<Layout title="Blog">
   <main class="flex flex-col items-center gap-8 text-gray-50">
-    <h1 class="font-semibold text-3xl">Blogs</h1>
-    <div class="flex flex-col w-96 gap-8">
+    <h1 class="text-3xl font-semibold">Blog</h1>
+    <div class="flex w-96 flex-col gap-8">
       {allBlogPosts.map((blog) => <BlogCard blog={blog} />)}
     </div>
   </main>
