--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ const allBlogPosts = await getCollection("blog");
 <Layout title="Blog">
   <main class="flex flex-col items-center gap-8 text-gray-50">
     <h1 class="text-3xl font-semibold">Blog</h1>
-    <div class="flex w-96 flex-col gap-8">
+    <div class="flex w-full max-w-2xl flex-col gap-8">
       {allBlogPosts.map((blog) => <BlogCard blog={blog} />)}
     </div>
   </main>
