Added images to test post

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,7 +5,7 @@ import Layout from "../../layouts/Layout.astro";
 const allBlogPosts = await getCollection("blog");
 ---
 
-<Layout title="Blog">
+<Layout title="Reid Mason blog">
   <main class="flex flex-col items-center gap-8 text-gray-50">
     <h1 class="text-3xl font-semibold">Blog</h1>
     <div class="flex w-full max-w-2xl flex-col gap-8">
