feat: updated astro and tailwind version

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Reid Mason">
-  <main class="w-full h-screen flex flex-col justify-center items-center">
+  <main class="w-full flex flex-col justify-center items-center h-full">
     <div class="flex flex-col items-center gap-2 mb-32 name-container">
       <h1 class="text-4xl font-semibold text-gray-50">Reid Mason</h1>
       <SocialLinks />
