--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Navbar from "../components/navbar/Navbar.astro";
 
 export interface Props {
   title: string;
@@ -8,8 +9,11 @@ export interface Props {
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html
+  lang="en"
+  class="before:content-[''] before:fixed before:top-0 before:left-0 before:w-full before:h-screen before:bg-gradient-to-br before:from-slate-800 before:to-slate-900 before:-z-10"
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -17,7 +21,14 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-gradient-to-br from-slate-800 to-slate-900 h-screen">
-    <slot />
+  <body class="h-screen">
+    <Navbar />
+    <main class="pt-16 h-full">
+      <slot />
+    </main>
   </body>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/@tailwindplus/elements@1"
+    type="module"></script>
 </html>
