--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -4,7 +4,7 @@ import LinkedInIcon from "../components/icons/LinkedInIcon.astro";
 import SocialLink from "../components/SocialLink.astro";
 ---
 
-<div class="flex gap-4 github-link origin-top">
+<div class="github-link flex origin-top gap-4">
   <SocialLink
     text="GitHub"
     href="https://github.com/ReidMason"
