--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -18,9 +18,9 @@ const navItems = [
 ];
 ---
 
-<header class="fixed top-0 left-0 right-0 z-50">
+<header class="fixed top-0 right-0 left-0 z-50">
   <nav
-    class="border-b border-gray-200 bg-white dark:gradient-to-br dark:from-slate-800 dark:to-slate-900 dark:border-white/10 dark:bg-gray-800/50"
+    class="dark:gradient-to-br border-b border-gray-200 bg-white dark:border-white/10 dark:bg-gray-800/50 dark:from-slate-800 dark:to-slate-900"
   >
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-16 justify-between">
