--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Reid Mason">
-  <main class="w-full flex flex-col justify-center items-center h-full">
-    <div class="flex flex-col items-center gap-2 mb-32 name-container">
+  <main class="flex h-full w-full flex-col items-center justify-center">
+    <div class="name-container mb-32 flex flex-col items-center gap-2">
       <h1 class="text-4xl font-semibold text-gray-50">Reid Mason</h1>
       <SocialLinks />
     </div>
