--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import SpeedInsights from "@vercel/speed-insights/astro";
 import "../styles/global.css";
 import Navbar from "../components/navbar/Navbar.astro";
 
@@ -25,6 +26,7 @@ const { title } = Astro.props;
     <Navbar />
     <main class="h-full pt-16">
       <slot />
+      <SpeedInsights />
     </main>
   </body>
 
