refactor: specifically set colour of social links

--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -8,6 +8,6 @@ const { href, text, Icon } = Astro.props;
     <Icon
       className="h-6 w-6 text-gray-400 transition-colors group-hover:text-gray-200"
     />
-    <span>{text}</span>
+    <span class="text-blue-500">{text}</span>
   </div>
 </Link>
