feat: set fetchpriority on images

--- a/src/components/photoGallery/PhotoGallery.astro
+++ b/src/components/photoGallery/PhotoGallery.astro
@@ -32,6 +32,7 @@ const getImageSrc = (src: string) => {
           width={500}
           height={500}
           loading={index < 6 ? "eager" : "lazy"}
+          fetchpriority={index < 6 ? "high" : "low"}
           decoding="async"
           data-index={index}
           data-src={photo.src}
